--- a/Notes App/package.json
+++ b/Notes App/package.json
@@ -1,20 +1,25 @@
 {
-    "name": "notes-app",
-    "version": "1.0.0",
-    "description": "Notes App menggunakan Web Components dan RESTful API",
-    "main": "src/app.js",
-    "scripts": {
-      "start-dev": "webpack serve --mode development --open",
-      "build": "webpack --mode production"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-      "webpack": "^5.88.2",
-      "webpack-cli": "^5.1.4",
-      "webpack-dev-server": "^4.15.0",
-      "html-webpack-plugin": "^5.5.3"
-    }
+  "name": "notes-app",
+  "version": "1.0.0",
+  "description": "Notes App menggunakan Web Components dan RESTful API",
+  "main": "src/app.js",
+  "scripts": {
+    "start-dev": "webpack serve --mode development --open",
+    "build": "webpack --mode production",
+    "serve": "npm run start-dev",
+    "lint": "eslint src/**/*.js",
+    "test": "jest",
+    "postinstall": "npm run lint"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.0",
+    "html-webpack-plugin": "^5.5.3",
+    "eslint": "^8.0.0",
+    "jest": "^27.0.0"
   }
-  
+}
